force-app/main/default/objects/Plan_Strategy__c/Plan_Strategy__c.object-meta.xml
<CustomObject>
    <description>Represents Strategic Imperatives associated to Plan. Multiple Strategic Imperatives can be created within Territory plans and multiple Objectives within individual Strategic imperatives are created</description>
    <label>Plan Strategy</label>
    <nameField>
        <label>Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Strategies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>