force-app/main/default/objects/Plan_Strategy__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Holds description of the strategic imperatives associated to a plan</description>
    <inlineHelpText>Holds description of the strategic imperatives associated to a plan</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>