force-app/main/default/objects/Plan_Strategy__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Holds Due Date of an Strategic Imperatives associated with a Plan</description>
    <inlineHelpText>Holds Due Date of an Strategic Imperatives associated with a Plan</inlineHelpText>
    <label>Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>