force-app/main/default/objects/Plan_Strategy__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Holds true or false for a given Strategic Imperatives is Active</description>
    <inlineHelpText>Holds true or false for a given Strategic Imperatives is Active</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>