force-app/main/default/objects/Plan_Strategy__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <description>Strategic Imperatives holds master detail relationship with associated Plan</description>
    <inlineHelpText>Strategic Imperatives holds master detail relationship with associated Plan</inlineHelpText>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Plan Strategies</relationshipLabel>
    <relationshipName>Plan_Strategies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>